continue to configure webpack and npm packages.

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,5 @@
     </form>
     <ul id="solution"></ul>
     <script type="text/javascript" src="bundle.js"></script>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  </body>
 </html>
